--- a/website/docs/cli/import/usage.mdx
+++ b/website/docs/cli/import/usage.mdx
@@ -70,12 +70,15 @@ align with the current (or desired) state of the imported object.
 When importing many resources, it is more efficient to import all the
 resources witha single command. This allows the state to be updated just once
 for all resources, rather than once for each resource. To do this create
-an import file that has the resource and id pairs, for example:
+a json file that has a map from the resource address to the appropriate id.
+For example:
 
-```
-aws_instance.example1 i-abcd1234
-aws_instance.example2 i-1234abcd
-aws_instance.example3 i-12345abc
+```json
+{
+    "aws_instance.example1": "i-abcd1234",
+    "aws_instance.example2": "i-1234abcd",
+    "aws_instance.example3": "i-12345abc"
+}
 ```
 
 Then you can run `terraform import` with the `-bulk` option:
