Simplified the list

--- a/website/docs/language/values/variables.mdx
+++ b/website/docs/language/values/variables.mdx
@@ -532,14 +532,14 @@ variable cannot be assigned multiple values within a single source.
 Terraform loads variables in the following order, with later sources taking
 precedence over earlier ones:
 
-* Environment variables
+* Environment variables (Lowest Precedence)
 * The `terraform.tfvars` file, if present.
 * The `terraform.tfvars.json` file, if present.
 * Any `*.auto.tfvars` or `*.auto.tfvars.json` files, processed in lexical order
   of their filenames.
 * Any `-var` and `-var-file` options on the command line, in the order they
   are provided. (This includes variables set by a Terraform Cloud
-  workspace.)
+  workspace.). (Highest Precendence).
 
 ~> **Important:** In Terraform 0.12 and later, variables with map and object
 values behave the same way as other variables: the last value found overrides
