--- a/website/docs/language/modules/develop/composition.mdx
+++ b/website/docs/language/modules/develop/composition.mdx
@@ -268,7 +268,7 @@ variable "recordsets" {
 }
 ```
 
-While DNS serves as a simple example, there are many more opportunities to
+While DNS serves are a simple example, there are many more opportunities to
 exploit common elements across vendors. A more complex example is Kubernetes,
 where there are now many different vendors offering hosted Kubernetes clusters
 and even more ways to run Kubernetes yourself.
