--- a/website/docs/language/functions/urlencode.mdx
+++ b/website/docs/language/functions/urlencode.mdx
@@ -23,7 +23,7 @@ UTF-8 and then percent encoding is applied separately to each UTF-8 byte.
 
 ```
 > urlencode("Hello World")
-Hello%20World
+Hello+World
 > urlencode("☃")
 %E2%98%83
 > "http://example.com/search?q=${urlencode("terraform urlencode")}"
