--- a/website/docs/cli/install/apt.mdx
+++ b/website/docs/cli/install/apt.mdx
@@ -81,6 +81,7 @@ following distribution releases:
 * Ubuntu 20.10 (`groovy`)
 * Ubuntu 21.04 (`hirsute`)
 * Ubuntu 21.10 (`impish`)
+* Ubuntu 22.04 (`jammy`)
 
 No repositories are available for other Debian or Ubuntu versions or
 any other APT-based Linux distributions. If you add the repository using
