Matthew Test of Branch edit

--- a/website/docs/intro/core-workflow.mdx
+++ b/website/docs/intro/core-workflow.mdx
@@ -1,6 +1,6 @@
 ---
 page_title: The Core Terraform Workflow - Guides
-description: 'An overview of how individuals, teams, and organizations can use Terraform. '
+description: 'An overview of how individuals, teams, and organizations can use Terraform.'
 ---
 
 # The Core Terraform Workflow
@@ -18,8 +18,7 @@ workflow to run smoothly for entire organizations.
 
 ## Working as an Individual Practitioner
 
-Let's first walk through how these parts fit together as an individual working
-on infrastructure as code.
+Let's first walk through how these parts fit together.
 
 ### Write
 
