--- a/website/docs/cli/commands/fmt.mdx
+++ b/website/docs/cli/commands/fmt.mdx
@@ -55,6 +55,6 @@ The command-line flags are all optional. The following flags are available:
 * `-list=false` - Don't list the files containing formatting inconsistencies.
 * `-write=false` - Don't overwrite the input files. (This is implied by `-check` or when the input is STDIN.)
 * `-diff` - Display diffs of formatting changes
-* `-check` - Check if the input is formatted. Exit status will be 0 if
+* `-check` - Check if the input is formatted. Displays the filenames that need formatting correction. Exit status will be 0 if
   all input is properly formatted and non-zero otherwise.
 * `-recursive` - Also process files in subdirectories. By default, only the given directory (or current directory) is processed.
