add backend limited

--- a/website/docs/language/settings/backends/configuration.mdx
+++ b/website/docs/language/settings/backends/configuration.mdx
@@ -42,6 +42,7 @@ There are some important limitations on backend configuration:
 
 - A configuration can only provide one backend block.
 - A backend block cannot refer to named values (like input variables, locals, or data source attributes).
+- The values declared within backend blocks cannot be [referenced](https://www.terraform.io/language/expressions/references#references-to-resource-attributes) elsewhere in the configuration.
 
 ### Credentials and Sensitive Data
 
