Remove mentions of HashiCorp Learn

--- a/website/docs/cli/state/move.mdx
+++ b/website/docs/cli/state/move.mdx
@@ -27,7 +27,7 @@ to document in your module exactly how the resource names have changed over
 time. Terraform will react to this information automatically during planning,
 and thus users of your module will not need to take any unusual extra steps.
 
-> **Hands On:** Try the [Use Configuration to Move Resources](https://learn.hashicorp.com/tutorials/terraform/move-config) on HashiCorp Learn.
+> **Hands On:** Try the [Use Configuration to Move Resources](https://learn.hashicorp.com/tutorials/terraform/move-config) tutorial.
 
 There are some other situations which require explicit state modifications,
 though. For those, consider the following Terraform commands:
