--- a/website/docs/language/index.mdx
+++ b/website/docs/language/index.mdx
@@ -17,7 +17,7 @@ and what data to fetch. Terraform language also lets you define dependencies
 between resources and create multiple similar resources from a single
 configuration block.
 
-> **Hands-on:** Try the [Write Terraform Configuration](https://learn.hashicorp.com/collections/terraform/configuration-language) tutorials on HashiCorp Learn.
+> **Hands-on:** Try the [Write Terraform Configuration](https://learn.hashicorp.com/collections/terraform/configuration-language) tutorials.
 
 ## About the Terraform Language
 
