--- a/website/docs/cli/cloud/migrating.mdx
+++ b/website/docs/cli/cloud/migrating.mdx
@@ -14,7 +14,7 @@ When you run `terraform init` in the following scenarios, Terraform will ask you
 
 ## Migrating from Local State or State Backends
 
-> **Hands On:** Try the [Migrate State to Terraform Cloud](https://learn.hashicorp.com/tutorials/terraform/cloud-migrate) tutorial on HashiCorp Learn.
+> **Hands On:** Try the [Migrate State to Terraform Cloud](https://learn.hashicorp.com/tutorials/terraform/cloud-migrate) tutorial.
 
 If the working directory already has state data available (using either local state or a [state
 backend](/language/settings/backends)), Terraform will ask your approval to migrate
