--- a/website/docs/cli/import/index.mdx
+++ b/website/docs/cli/import/index.mdx
@@ -7,7 +7,7 @@ description: >-
 
 # Import
 
-> **Hands-on:** Try the [Import Terraform Configuration](https://learn.hashicorp.com/tutorials/terraform/state-import?in=terraform/state&utm_source=WEBSITE&utm_medium=WEB_IO&utm_offer=ARTICLE_PAGE&utm_content=DOCS) tutorial on HashiCorp Learn.
+> **Hands-on:** Try the [Import Terraform Configuration](https://learn.hashicorp.com/tutorials/terraform/state-import?in=terraform/state&utm_source=WEBSITE&utm_medium=WEB_IO&utm_offer=ARTICLE_PAGE&utm_content=DOCS) tutorial.
 
 Terraform is able to import existing infrastructure. This allows you take
 resources you've created by some other means and bring it under Terraform
