--- a/website/docs/language/functions/index.mdx
+++ b/website/docs/language/functions/index.mdx
@@ -7,7 +7,7 @@ description: >-
 
 # Built-in Functions
 
-> **Hands-on:** Try the [Perform Dynamic Operations with Functions](https://learn.hashicorp.com/tutorials/terraform/functions?in=terraform/configuration-language&utm_source=WEBSITE&utm_medium=WEB_IO&utm_offer=ARTICLE_PAGE&utm_content=DOCS) tutorial on HashiCorp Learn.
+> **Hands-on:** Try the [Perform Dynamic Operations with Functions](https://learn.hashicorp.com/tutorials/terraform/functions?in=terraform/configuration-language&utm_source=WEBSITE&utm_medium=WEB_IO&utm_offer=ARTICLE_PAGE&utm_content=DOCS) tutorial.
 
 The Terraform language includes a number of built-in functions that you can
 call from within expressions to transform and combine values. The general
