--- a/website/docs/language/modules/develop/index.mdx
+++ b/website/docs/language/modules/develop/index.mdx
@@ -7,7 +7,7 @@ description: >-
 
 # Creating Modules
 
-> **Hands-on:** Try the [Reuse Configuration with Modules](https://learn.hashicorp.com/collections/terraform/modules?utm_source=WEBSITE&utm_medium=WEB_IO&utm_offer=ARTICLE_PAGE&utm_content=DOCS) collection on HashiCorp Learn.
+> **Hands-on:** Try the [Reuse Configuration with Modules](https://learn.hashicorp.com/collections/terraform/modules?utm_source=WEBSITE&utm_medium=WEB_IO&utm_offer=ARTICLE_PAGE&utm_content=DOCS) tutorials.
 
 A _module_ is a container for multiple resources that are used together.
 Modules can be used to create lightweight abstractions, so that you can
