Remove mentions of the documentation navigation or sidebar

--- a/website/docs/language/functions/index.mdx
+++ b/website/docs/language/functions/index.mdx
@@ -23,8 +23,7 @@ For more details on syntax, see
 in the Expressions section.
 
 The Terraform language does not support user-defined functions, and so only
-the functions built in to the language are available for use. The navigation
-for this section includes a list of all of the available built-in functions.
+the functions built in to the language are available for use. The documentation includes a page for all of the available built-in functions.
 
 You can experiment with the behavior of Terraform's built-in functions from
 the Terraform expression console, by running
