--- a/website/docs/language/settings/backends/configuration.mdx
+++ b/website/docs/language/settings/backends/configuration.mdx
@@ -63,7 +63,7 @@ The arguments used in the block's body are specific to the chosen backend type; 
 
 Some backends allow providing access credentials directly as part of the configuration for use in unusual situations, for pragmatic reasons. However, in normal use we _do not_ recommend including access credentials as part of the backend configuration. Instead, leave those arguments completely unset and provide credentials via the credentials files or environment variables that are conventional for the target system, as described in the documentation for each backend.
 
-Refer to the list of backend types in the navigation sidebar for details about each supported backend type and its configuration arguments.
+Refer to the page for each backend type for full details and that type's configuration arguments.
 
 ### Default Backend
 
