--- a/website/docs/language/upgrade-guides/0-10.mdx
+++ b/website/docs/language/upgrade-guides/0-10.mdx
@@ -17,8 +17,7 @@ After reviewing this guide, we recommend reviewing the Changelog to check on
 specific notes about the resources and providers you use.
 
 This guide focuses on changes from v0.9 to v0.10. Each previous major release
-has its own upgrade guide, so please consult the other guides (available
-in the navigation) if you are upgrading directly from an earlier version.
+has its own upgrade guide, so please consult the other guides if you are upgrading directly from an earlier version.
 
 ## Separated Provider Plugins
 
