--- a/website/docs/language/upgrade-guides/index.mdx
+++ b/website/docs/language/upgrade-guides/index.mdx
@@ -6,5 +6,4 @@ description: Upgrade Guides
 # Upgrade Guides
 
 Terraform's major releases can include an upgrade guide to help upgrading users
-walk through backwards compatibility issues and changes to expect. See the
-navigation for the available upgrade guides.
+walk through backwards compatibility issues and changes to expect. 
