--- a/website/docs/cli/commands/index.mdx
+++ b/website/docs/cli/commands/index.mdx
@@ -7,10 +7,8 @@ description: An introduction to the terraform command and its available subcomma
 
 > **Hands-on:** Try the [Terraform: Get Started](https://learn.hashicorp.com/collections/terraform/aws-get-started?utm_source=WEBSITE&utm_medium=WEB_IO&utm_offer=ARTICLE_PAGE&utm_content=DOCS) tutorials.
 
-The command line interface to Terraform is via the `terraform` command, which
+The command line interface to Terraform is with the `terraform` command, which
 accepts a variety of subcommands such as `terraform init` or `terraform plan`.
-A full list of all of the supported subcommands is in the navigation section
-of this page.
 
 We refer to the `terraform` command line tool as "Terraform CLI" elsewhere
 in the documentation. This terminology is often used to distinguish it from
@@ -71,8 +69,7 @@ you can run `terraform validate -help`.
 
 The inline help built in to Terraform CLI describes the most important
 characteristics of each command. For more detailed information, refer to each
-command's section of this documentation, available in the navigation
-section of this page.
+command's page for details.
 
 ## Switching working directory with `-chdir`
 
