--- a/website/docs/language/resources/syntax.mdx
+++ b/website/docs/language/resources/syntax.mdx
@@ -106,8 +106,7 @@ documentation you are viewing.
 To browse the publicly available providers and their documentation, see
 [the providers section of the Terraform Registry](https://registry.terraform.io/browse/providers).
 
--> **Note:** Provider documentation used to be hosted directly on terraform.io,
-as part of Terraform's core documentation. Although some provider documentation
+-> **Note:** Provider documentation used to be hosted as part of Terraform's core documentation. Although some provider documentation
 might still be hosted here, the Terraform Registry is now the main home for all
 public provider docs.
 
