--- a/website/docs/internals/archiving.mdx
+++ b/website/docs/internals/archiving.mdx
@@ -7,7 +7,7 @@ description: >-
 ---
 
 <!--
-This page is purposefully not linked within the Terraform documention: it is intended to be linked only from the README files of archived providers.
+This page is not in the Terraform documentation intentionally. Only link it from the README files of archived providers.
 -->
 
 # Archiving Providers
