--- a/website/docs/language/modules/sources.mdx
+++ b/website/docs/language/modules/sources.mdx
@@ -18,7 +18,7 @@ used by other Terraform commands.
 > **Hands-on:** Try the [Use Modules From the Registry](https://learn.hashicorp.com/tutorials/terraform/module-use) or [Build and Use a Local Module](https://learn.hashicorp.com/tutorials/terraform/module-create) tutorials.
 
 The module installer supports installation from a number of different source
-types, as listed below.
+types.
 
 - [Local paths](#local-paths)
 
