--- a/website/docs/language/upgrade-guides/0-12.mdx
+++ b/website/docs/language/upgrade-guides/0-12.mdx
@@ -34,7 +34,7 @@ the functionality for automatically migrating from the legacy remote state
 mechanism.
 
 This guide focuses on changes from v0.11 to v0.12. Each previous major release
-has its own upgrade guide, so please consult the other guides to upgrade step-by-step to v0.11 first.
+has its own upgrade guide. Please consult the other guides to upgrade step-by-step to v0.11 first.
 
 Terraform v0.11.14 (and any subsequent v0.11 releases) also include some
 additional functionality to help smooth the upgrade, which we will use later
