--- a/website/docs/language/values/variables.mdx
+++ b/website/docs/language/values/variables.mdx
@@ -10,7 +10,7 @@ description: >-
 > **Hands-on:** Try the [Customize Terraform Configuration with Variables](https://learn.hashicorp.com/tutorials/terraform/variables?in=terraform/configuration-language&utm_source=WEBSITE&utm_medium=WEB_IO&utm_offer=ARTICLE_PAGE&utm_content=DOCS) tutorial.
 
 Input variables let you customize aspects of Terraform modules without altering
-the module's own source code. This allows you to share modules across different
+the module's own source code. This functionality allows you to share modules across different
 Terraform configurations, making your module composable and reusable.
 
 When you declare variables in the root module of your configuration, you can
