--- a/website/docs/cli/commands/import.mdx
+++ b/website/docs/cli/commands/import.mdx
@@ -7,8 +7,7 @@ description: The terraform import command brings existing resources into Terrafo
 
 > **Hands-on:** Try the [Import Terraform Configuration](https://learn.hashicorp.com/tutorials/terraform/state-import?in=terraform/state&utm_source=WEBSITE&utm_medium=WEB_IO&utm_offer=ARTICLE_PAGE&utm_content=DOCS) tutorial.
 
-The `terraform import` command is used to
-[import existing resources](/cli/import)
+The `terraform import` command [imports existing resources](/cli/import)
 into Terraform.
 
 ## Usage
