--- a/website/docs/language/expressions/references.mdx
+++ b/website/docs/language/expressions/references.mdx
@@ -11,7 +11,7 @@ description: >-
 > **Hands-on:** Try the [Create Dynamic Expressions](https://learn.hashicorp.com/tutorials/terraform/expressions?in=terraform/configuration-language&utm_source=WEBSITE&utm_medium=WEB_IO&utm_offer=ARTICLE_PAGE&utm_content=DOCS) tutorial.
 
 Terraform makes several kinds of named values available. Each of these names is
-an expression that references the associated value; you can use them as
+an expression that references the associated value. You can use them as
 standalone expressions, or combine them with other expressions to compute new
 values.
 
