--- a/website/docs/cli/commands/index.mdx
+++ b/website/docs/cli/commands/index.mdx
@@ -7,7 +7,7 @@ description: An introduction to the terraform command and its available subcomma
 
 > **Hands-on:** Try the [Terraform: Get Started](https://learn.hashicorp.com/collections/terraform/aws-get-started?utm_source=WEBSITE&utm_medium=WEB_IO&utm_offer=ARTICLE_PAGE&utm_content=DOCS) tutorials.
 
-The command line interface to Terraform is with the `terraform` command, which
+The command line interface to Terraform is the `terraform` command, which
 accepts a variety of subcommands such as `terraform init` or `terraform plan`.
 
 We refer to the `terraform` command line tool as "Terraform CLI" elsewhere
