--- a/website/docs/cli/commands/plan.mdx
+++ b/website/docs/cli/commands/plan.mdx
@@ -20,8 +20,7 @@ when Terraform creates a plan it:
 
 > **Hands-on:** Try the [Terraform: Get Started](https://learn.hashicorp.com/collections/terraform/aws-get-started?utm_source=WEBSITE&utm_medium=WEB_IO&utm_offer=ARTICLE_PAGE&utm_content=DOCS) tutorials. For more in-depth details on the `plan` command, check out the [Create a Terraform Plan tutorial](https://learn.hashicorp.com/tutorials/terraform/plan?utm_source=WEBSITE&utm_medium=WEB_IO&utm_offer=ARTICLE_PAGE&utm_content=DOCS).
 
-The plan command alone will not actually carry out the proposed changes, and
-so you can use this command to check whether the proposed changes match what
+The `plan` command alone does not actually carry out the proposed changes You can use this command to check whether the proposed changes match what
 you expected before you apply the changes or share your changes with your
 team for broader review.
 
