--- a/website/docs/language/meta-arguments/for_each.mdx
+++ b/website/docs/language/meta-arguments/for_each.mdx
@@ -19,7 +19,7 @@ Terraform has two ways to do this:
 > **Hands-on:** Try the [Manage Similar Resources With For Each](https://learn.hashicorp.com/tutorials/terraform/for-each?in=terraform/configuration-language) tutorial.
 
 If a resource or module block includes a `for_each` argument whose value is a map or
-a set of strings, Terraform will create one instance for each member of
+a set of strings, Terraform creates one instance for each member of
 that map or set.
 
 -> **Version note:** `for_each` was added in Terraform 0.12.6. Module support
