--- a/website/docs/language/meta-arguments/lifecycle.mdx
+++ b/website/docs/language/meta-arguments/lifecycle.mdx
@@ -9,8 +9,7 @@ description: >-
 
 > **Hands-on:** Try the [Lifecycle Management](https://learn.hashicorp.com/tutorials/terraform/resource-lifecycle?utm_source=WEBSITE&utm_medium=WEB_IO&utm_offer=ARTICLE_PAGE&utm_content=DOCS) tutorial.
 
-The general lifecycle for resources is described in the
-[Resource Behavior](/language/resources/behavior) page. Some details of
+The [Resource Behavior](/language/resources/behavior) page describes the general lifecycle for resources. Some details of
 that behavior can be customized using the special nested `lifecycle` block
 within a resource block body:
 
