--- a/website/docs/language/modules/sources.mdx
+++ b/website/docs/language/modules/sources.mdx
@@ -12,8 +12,7 @@ The `source` argument in [a `module` block](/language/modules/syntax)
 tells Terraform where to find the source code for the desired child module.
 
 Terraform uses this during the module installation step of `terraform init`
-to download the source code to a directory on local disk so that it can be
-used by other Terraform commands.
+to download the source code to a directory on local disk so that other Terraform commands can use it. 
 
 > **Hands-on:** Try the [Use Modules From the Registry](https://learn.hashicorp.com/tutorials/terraform/module-use) or [Build and Use a Local Module](https://learn.hashicorp.com/tutorials/terraform/module-create) tutorials.
 
