--- a/website/docs/language/resources/provisioners/syntax.mdx
+++ b/website/docs/language/resources/provisioners/syntax.mdx
@@ -16,7 +16,7 @@ for service.
 > **Hands-on:** Try the [Provision Infrastructure Deployed with Terraform](https://learn.hashicorp.com/collections/terraform/provision?utm_source=WEBSITE&utm_medium=WEB_IO&utm_offer=ARTICLE_PAGE&utm_content=DOCS) tutorials to learn about more declarative ways to handle provisioning actions.
 
 Terraform includes the concept of provisioners as a measure of pragmatism,
-knowing that there will always be certain behaviors that can't be directly
+knowing that there are always certain behaviors that cannot be directly
 represented in Terraform's declarative model.
 
 However, they also add a considerable amount of complexity and uncertainty to
