--- a/website/docs/language/providers/index.mdx
+++ b/website/docs/language/providers/index.mdx
@@ -9,7 +9,7 @@ description: >-
 
 > **Hands-on:** Try the [Perform CRUD Operations with Providers](https://learn.hashicorp.com/tutorials/terraform/provider-use?in=terraform/configuration-language&utm_source=WEBSITE&utm_medium=WEB_IO&utm_offer=ARTICLE_PAGE&utm_content=DOCS) tutorial.
 
-Terraform relies on plugins called "providers" to interact with cloud providers,
+Terraform relies on plugins called providers to interact with cloud providers,
 SaaS providers, and other APIs.
 
 Terraform configurations must declare which providers they require so that
