--- a/website/docs/language/index.mdx
+++ b/website/docs/language/index.mdx
@@ -1,7 +1,7 @@
 ---
 page_title: Overview - Configuration Language
 description: >-
-  You can use the Terraform language to write configuration files that tell
+  Use the Terraform language to write configuration files that tell
   Terraform how to manage a collection of infrastructure.
 ---
 
