--- a/website/docs/cli/index.mdx
+++ b/website/docs/cli/index.mdx
@@ -1,8 +1,8 @@
 ---
 page_title: Terraform CLI Documentation
 description: >-
-  Learn how to use Terraform's CLI-based workflows. You can use the CLI alone or
-  in conjunction with Terraform Cloud or Terraform Enterprise.
+  Learn Terraform's CLI-based workflows. You can use the CLI alone or
+  with Terraform Cloud or Terraform Enterprise.
 ---
 
 # Terraform CLI Documentation
