--- a/website/docs/language/index.mdx
+++ b/website/docs/language/index.mdx
@@ -1,8 +1,7 @@
 ---
 page_title: Overview - Configuration Language
 description: >-
-  Use the Terraform language to write configuration files that tell
-  Terraform how to manage a collection of infrastructure.
+  Use the Terraform configuration language to describe the infrastructure that Terraform manages.
 ---
 
 # Terraform Language Documentation
