website: Version-specific upgrade guides (v1.1 branch)
Before our website allowed selecting from older versions of Terraform to
see older documentation we needed to preserve all of the historical
upgrade guides in the latest release branch so that they'd stay available
on the website.

However, our new strategy is for each release to have its own separate
set of documentation selectable using a global version selector. We should
therefore now have only the upgrade guide for the each minor release
on its release branch, with the upgrade guides for earlier releases
instead maintained on their own branches.

However, our v1.1 branch is, as a matter of pragmatism, serving as the home
for the "v1.1 and earlier" documentation, and so there will continue to
be multiple upgrade guides on that branch. For that reason, we're
preserving the URL scheme "upgrade-guides" (plural) even though the URL
now points to only a single version upgrade guide because that causes
readers to land in the correct place if they are on a modern version's
upgrade guide page and they use the version selector to choose the
"v1.1 and earlier" option.

This retroactively renames the "Terraform v1.0 Compatibility Promises" to
be "v1.x" compatibility promises instead, because we intend to preserve
them throughout all of the releases whose major version is 1.

--- a/website/docs/language/upgrade-guides/1-1.mdx
+++ b/website/docs/language/upgrade-guides/1-1.mdx
@@ -17,7 +17,7 @@ latest v1.1 release, skipping the v1.0 series entirely, at any point where the
 v1.0 upgrade guide calls for upgrading to Terraform v1.0.
 
 Terraform v1.1 continues to honor
-[the Terraform v1.0 Compatibility Promises](/language/v1-compatibility-promises),
+[the Terraform v1.x Compatibility Promises](https://www.terraform.io/language/v1-compatibility-promises),
 but there are some behavior changes outside of those promises that may affect a
 small number of users, described in the following sections.
 
