--- a/website/docs/language/upgrade-guides/index.mdx
+++ b/website/docs/language/upgrade-guides/index.mdx
@@ -5,6 +5,25 @@ description: Upgrade Guides
 
 # Upgrade Guides
 
-Terraform's major releases can include an upgrade guide to help upgrading users
-walk through backwards compatibility issues and changes to expect. See the
-navigation for the available upgrade guides.
+Terraform's major and minor releases each include an upgrade guide which
+discusses any special steps that might be needed when upgrading to that new
+version.
+
+This collection of upgrade guides is for Terraform v1.1 and earlier, due to
+the documentation version selected in the navigation bar. To see upgrade
+guides for later versions of Terraform, use the version selector in the
+navigation bar to select the version you are interested in.
+
+The following historical version upgrade guides are available here:
+
+* [Terraform v1.1](/language/upgrade-guides/1-1)
+* [Terraform v1.0](/language/upgrade-guides/1-0)
+* [Terraform v0.15](/language/upgrade-guides/0-15)
+* [Terraform v0.14](/language/upgrade-guides/0-14)
+* [Terraform v0.13](/language/upgrade-guides/0-13)
+* [Terraform v0.12](/language/upgrade-guides/0-12)
+* [Terraform v0.11](/language/upgrade-guides/0-11)
+* [Terraform v0.10](/language/upgrade-guides/0-10)
+* [Terraform v0.9](/language/upgrade-guides/0-9)
+* [Terraform v0.8](/language/upgrade-guides/0-8)
+* [Terraform v0.7](/language/upgrade-guides/0-7)
