backport of commit e4d5ffd8eb68332f15a9181f8bd30738d9e07b9f

--- a/website/docs/cli/commands/state/replace-provider.mdx
+++ b/website/docs/cli/commands/state/replace-provider.mdx
@@ -38,7 +38,7 @@ also accepts the option
 [`-ignore-remote-version`](/cli/cloud/command-line-arguments#ignore-remote-version).
 
 For configurations using
-[the `local` state rm](/language/settings/backends/local) only,
+[the `local` state](/language/settings/backends/local) only,
 `terraform state replace-provider` also accepts the legacy options
 [`-state`, `-state-out`, and `-backup`](/language/settings/backends/local#command-line-arguments).
 
