--- a/website/docs/language/settings/backends/gcs.mdx
+++ b/website/docs/language/settings/backends/gcs.mdx
@@ -45,6 +45,23 @@ resource "template_file" "bar" {
     greeting = "${data.terraform_remote_state.foo.greeting}"
   }
 }
+# Terraform >= 0.12
+resource "template_file" "bar" {
+  template = "${greeting}"
+
+  vars {
+    greeting = data.terraform_remote_state.foo.output.greeting
+  }
+}
+
+# Terraform <= 0.11
+resource "template_file" "bar" {
+  template = "${greeting}"
+
+  vars {
+    greeting = "${data.terraform_remote_state.foo.greeting}"
+  }
+}
 ```
 
 ## Authentication
