Updating distro lists to be current as of 2022-11
Distro lists were out-of-date, just bringing them into sync with:
https://github.com/hashicorp/linux-packaging#current-support

--- a/website/docs/cli/install/apt.mdx
+++ b/website/docs/cli/install/apt.mdx
@@ -85,13 +85,14 @@ following distribution releases:
 * Debian 9 (`stretch`)
 * Debian 10 (`buster`)
 * Debian 11 (`bullseye`)
+* Debian 12 (`bookworm`)
 * Ubuntu 16.04 (`xenial`)
 * Ubuntu 18.04 (`bionic`)
-* Ubuntu 19.10 (`eoam`)
 * Ubuntu 20.04 (`focal`)
 * Ubuntu 20.10 (`groovy`)
 * Ubuntu 21.04 (`hirsute`)
 * Ubuntu 21.10 (`impish`)
+* Ubuntu 22.04 (`jammy`)
 
 No repositories are available for other Debian or Ubuntu versions or
 any other APT-based Linux distributions. If you add the repository using
