added documention to demonstrate dot export to png

--- a/website/docs/cli/commands/graph.mdx
+++ b/website/docs/cli/commands/graph.mdx
@@ -53,5 +53,10 @@ by GraphViz:
 $ terraform graph | dot -Tsvg > graph.svg
 ```
 
+Alternatively, `dot` can export to other image file formats by changing the flag input:
+```shellsession
+$ terraform graph | dot -Tpng > graph.png
+```
+
 Here is an example graph output:
 ![Graph Example](/img/docs/graph-example.png)
