--- a/website/docs/language/state/workspaces.mdx
+++ b/website/docs/language/state/workspaces.mdx
@@ -22,6 +22,7 @@ You can use multiple workspaces with the following backends:
 - [Consul](/language/settings/backends/consul)
 - [COS](/language/settings/backends/cos)
 - [GCS](/language/settings/backends/gcs)
+- [HTTP](/language/settings/backends/http)
 - [Kubernetes](/language/settings/backends/kubernetes)
 - [Local](/language/settings/backends/local)
 - [OSS](/language/settings/backends/oss)
