added ' # ' in variables and outputs heading

--- a/website/docs/language/values/index.mdx
+++ b/website/docs/language/values/index.mdx
@@ -5,7 +5,7 @@ description: >-
   language.
 ---
 
-# Variables and Outputs
+## Variables and Outputs
 
 The Terraform language includes a few kinds of blocks for requesting or
 publishing named values.
