--- a/website/docs/language/upgrade-guides/index.mdx
+++ b/website/docs/language/upgrade-guides/index.mdx
@@ -11,3 +11,5 @@ to upgrade to.
 
 Terraform v1.4 is still under development and so its upgrade guide is not yet
 finalized. This should be updated before the final v1.4.0 release.
+
+todo
