add docs meta descriptions

--- a/website/docs/cli/state/recover.mdx
+++ b/website/docs/cli/state/recover.mdx
@@ -1,8 +1,9 @@
 ---
 page_title: Recovering from State Disasters - Terraform CLI
-descriptin: >-
-  Commands that allow you to restore state backups and override Terraform state
-  protections.
+description: >-
+  Learn how to restore state backups and override Terraform state
+  protections to fix state disasters.
+
 ---
 
 # Recovering from State Disasters
