--- a/website/docs/configuration/expressions.mdx
+++ b/website/docs/configuration/expressions.mdx
@@ -1,5 +1,7 @@
 ---
 page_title: Expressions Landing Page - Configuration Language
+description: >-
+  Old landing page for expressions. Believe this is no longer public.
 ---
 
 # Expressions Landing Page
