--- a/website/docs/configuration/modules.mdx
+++ b/website/docs/configuration/modules.mdx
@@ -1,5 +1,7 @@
 ---
 page_title: Modules Landing Page - Configuration Language
+description: >-
+  Old landing page for modules. Believe this is no longer public.
 ---
 
 # Modules Landing Page
