--- a/website/docs/language/modules/testing-experiment.mdx
+++ b/website/docs/language/modules/testing-experiment.mdx
@@ -1,5 +1,7 @@
 ---
 page_title: Module Testing Experiment - Configuration Language
+description: >-
+  Description stub. This page is not present in language-nav-data.json, thus is not public.
 ---
 
 # Module Testing Experiment
