--- a/website/docs/cli/cloud/index.mdx
+++ b/website/docs/cli/cloud/index.mdx
@@ -1,5 +1,7 @@
 ---
 page_title: Using Terraform Cloud - Terraform CLI
+description: >-
+  Learn how to use Terraform Cloud and Terraform Enterprise on the command line using the Terrafor CLI.
 ---
 
 # Using Terraform Cloud with Terraform CLI
