--- a/website/docs/configuration/index.mdx
+++ b/website/docs/configuration/index.mdx
@@ -1,5 +1,7 @@
 ---
 page_title: Terraform Configuration
+description: >-
+  Old landing page for configuration. Believe this is no longer public.
 ---
 
 # Terraform Configuration
