--- a/website/docs/configuration/resources.mdx
+++ b/website/docs/configuration/resources.mdx
@@ -1,5 +1,7 @@
 ---
 page_title: Resources Landing Page - Configuration Language
+description: >-
+  Old landing page for resources. Believe this is no longer public.
 ---
 
 # Resources Landing Page
