--- a/website/docs/language/settings/backends/configuration.mdx
+++ b/website/docs/language/settings/backends/configuration.mdx
@@ -1,5 +1,7 @@
 ---
 page_title: Backend Configuration - Configuration Language
+description: >-
+  Learn about the available state backends, the backend block, initializing backends, partial backend configuration, changing backend configuration, and unconfiguring a backend.
 ---
 
 # Backend Configuration
