backport of commit 57a45e360a26f9d9028438ae8b7e123daa2e3a5e

--- a/website/docs/language/upgrade-guides/index.mdx
+++ b/website/docs/language/upgrade-guides/index.mdx
@@ -5,7 +5,7 @@ description: Upgrading to Terraform v1.4
 
 # Upgrading to Terraform v1.4
 
--> Note: Use the version selector to view the upgrade guides for older Terraform versions.
+-> **Tip:** Use the version selector to view the upgrade guides for older Terraform versions.
 
 Terraform v1.4 is a minor release in the stable Terraform v1.0 series.
 
