--- a/website/docs/language/upgrade-guides/index.mdx
+++ b/website/docs/language/upgrade-guides/index.mdx
@@ -9,7 +9,7 @@ description: Upgrading to Terraform v1.4
 
 Terraform v1.4 is a minor release in the stable Terraform v1.0 series.
 
-Terraform v1.4 continues to honor the [Terraform v1.0 Compatibility Promises](https://developer.hashicorp.com/terraform/language/v1-compatibility-promises), but there are some behavior changes outside of those promises that may affect a small number of users. Specifically, the following updates may require additional upgrade steps:
+Terraform v1.4 honors the [Terraform v1.0 Compatibility Promises](https://developer.hashicorp.com/terraform/language/v1-compatibility-promises), but there are some behavior changes outside of those promises that may affect a small number of users. Specifically, the following updates may require additional upgrade steps:
 * [Provider caching during `terraform init`](#provider-caching-during-terraform-init)
 * [Hostname interpretation during `terraform init`](#hostname-interpretation-during-terraform-init)
 
